src/test/ui/terr-sorts.stderr
error[E0308]: arguments to this function are incorrect
  --> $DIR/terr-sorts.rs:10:5
   |
LL |     want_foo(b);
   |     ^^^^^^^^^-^
   |              |
   |              expected `Foo`, found `Box<Foo>`
   |
note: function defined here
  --> $DIR/terr-sorts.rs:8:4
   |
LL | fn want_foo(f: Foo) {}
   |    ^^^^^^^^ ------
help: provide an argument of the correct type
   |
LL |     want_foo({Foo});
   |     ^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
